--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -11,11 +11,11 @@
          steps:
            - uses: actions/checkout@v2
              with:
-               submodules: true
+               submodules: False
            - name: Setup Hugo
              uses: peaceiris/actions-hugo@v2
              with:
-               hugo-version: '0.110.0'
+               hugo-version: '0.147.8'
            - name: Build
              run: hugo --minify
            - name: Deploy
