--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -1,25 +1,40 @@
-     name: Deploy Hugo site
+name: Deploy Hugo site
 
-     on:
-       push:
-         branches: [ master ]
+on:
+  push:
+    branches:
+      - master
 
-     jobs:
-       build:
-         runs-on: windows-latest
-         steps:
-           - uses: actions/checkout@v2
-             with:
-               submodules: False
-           - name: Setup Hugo
-             uses: peaceiris/actions-hugo@v2
-             with:
-               hugo-version: '0.147.8'
-           - name: Build
-             run: hugo --minify
-           - name: Deploy
-             uses: peaceiris/actions-gh-pages@v3
-             with:
-               github_token: ${{ secrets.GITHUB_TOKEN }}
-               publish_dir: ./public
+jobs:
+  build:
+    runs-on: windows-latest
 
+    steps:
+      # 1. 拉取源码
+      - name: Checkout repository
+        uses: actions/checkout@v2
+        with:
+          fetch-depth: 0
+
+      # 2. 手动克隆 PaperMod 主题到 themes/PaperMod
+      - name: Clone PaperMod theme
+        run: |
+          rm -rf themes/PaperMod
+          git clone https://github.com/adityatelange/hugo-PaperMod.git themes/PaperMod
+
+      # 3. 安装 Hugo
+      - name: Setup Hugo
+        uses: peaceiris/actions-hugo@v2
+        with:
+          hugo-version: '0.147.8'
+
+      # 4. 构建站点
+      - name: Build
+        run: hugo --minify
+
+      # 5. 部署到 gh-pages
+      - name: Deploy
+        uses: peaceiris/actions-gh-pages@v3
+        with:
+          github_token: ${{ secrets.GITHUB_TOKEN }}
+          publish_dir: ./public
